tests/ui/linkage-attr/linkage3.stderr
error[E0539]: malformed `linkage` attribute input
  --> $DIR/linkage3.rs:6:5
   |
LL |     #[linkage = "foo"]
   |     ^^^^^^^^^^^^-----^
   |                 |
   |                 valid arguments are `available_externally`, `common`, `extern_weak`, `external`, `internal`, `linkonce`, `linkonce_odr`, `weak` or `weak_odr`
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL -     #[linkage = "foo"]
LL +     #[linkage = "available_externally"]
   |
LL -     #[linkage = "foo"]
LL +     #[linkage = "common"]
   |
LL -     #[linkage = "foo"]
LL +     #[linkage = "extern_weak"]
   |
LL -     #[linkage = "foo"]
LL +     #[linkage = "external"]
   |
   = and 5 other candidates

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0539`.
